# fastAPI_web_demo

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  seeder.py
alembic/: env.py
alembic/versions/: 743b85342132_initial_migration.py  e3ddcd83b270_建立用户表和token表.py
src/: lifespan.py  main.py
src/auth/: dependencies.py  model.py  router.py  schema.py  user_manager.py
src/core/: config.py  database.py  exception.py  model.py  redis_db.py
src/dishes/: model.py  repository.py  router.py  schema.py  service.py
