[project]
name = "fastapi-web-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.120.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
